# rosenbrock

./: README.md  example.py  rosenbrock.py  setup.cfg  setup.py
example/: example.py
src/rosenbrock/: rosenbrock.py
