[metadata]
name = rosenbrock
version = 0.7.1
author = Ali Siahkoohi
author_email = ali.siahkoohi@gmail.com
description = Rosenbrock distribution, including unnormalized density and analytic sampler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alisiahkoohi/rosenbrock
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    torch
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
